# mlops-covid

./: .pre-commit-config.yaml  Makefile  Pipfile  README.md  backend.db  mlflow_db.db  pyproject.toml  test-copilot.py
.github/: ci-tests.yml
.github/workflows/: CD.yml  ci-tests.yml  delete_all_aws_resources.yml  delete_all_resources.yml  delete_infra.yml  delete_mlflow.yml  template.yml  (+5 more)
EDA/: README.md  Version_1.ipynb
delivery/: README.md  delivery_pt1.sh  delivery_pt2.sh
deployment/: README.md  covid_prediction-manifest.json  deployment.yaml  inbetween_nb.ipynb  inbetween_nb.py
deployment+monitoring/: README.md  covid_prediction-manifest.json  monitor-manifest.json  monitoring.yaml  predicting.yaml
deployment_PrefectFargate/: Dockerfile  README.md  covid_pred.py  requirements.txt  setup.py
deployment_PrefectRemoteAgent/: README.md  covid_prediction-manifest.json  deployment.yaml
exp-track-mod-reg/: REAME.md  exp-track.ipynb  mlflow_db.db  model-registry.ipynb
exp-track-mod-reg-mlflowAppRunner/: README.md  mlflow.db
exp-track-mod-reg-mlflowFargate/: Dockerfile  README.md  exp-track.ipynb  model-registry.ipynb  pyproject.toml
exp-track-mod-reg-mlflowFargate/infrastructure/: create_ecr_repository.yml  ecr_repository.yml  ecs_cluster_mlflow_service.yml
exp-track-mod-reg-mlflowFargate/models/: MLmodel  conda.yaml  model.pkl  python_env.yaml  requirements.txt
mlflow-docker-fargate/: Pipfile  README.md  deploy_stack.sh
monitoring/: README.md  inbetween_nb.py  test_send_email.py
testing/: README.md  covid_PredMonitor.py  covid_PredMonitor_test.py
(+29 files in other folders)
